コード整形
タブをスペースへ変換するためideaのコード整形を実行